; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-bitset.c_cursor_next_array_entry.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-bitset.c_cursor_next_array_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_bitset_cursor = type { i32, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_bitset_cursor*)* @cursor_next_array_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cursor_next_array_entry(%struct.dm_bitset_cursor* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dm_bitset_cursor*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.dm_bitset_cursor* %0, %struct.dm_bitset_cursor** %3, align 8
  %6 = load %struct.dm_bitset_cursor*, %struct.dm_bitset_cursor** %3, align 8
  %7 = getelementptr inbounds %struct.dm_bitset_cursor, %struct.dm_bitset_cursor* %6, i32 0, i32 3
  %8 = call i32 @dm_array_cursor_next(i32* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %29

13:                                               ; preds = %1
  %14 = load %struct.dm_bitset_cursor*, %struct.dm_bitset_cursor** %3, align 8
  %15 = getelementptr inbounds %struct.dm_bitset_cursor, %struct.dm_bitset_cursor* %14, i32 0, i32 3
  %16 = bitcast i32** %5 to i8**
  %17 = call i32 @dm_array_cursor_get_value(i32* %15, i8** %16)
  %18 = load %struct.dm_bitset_cursor*, %struct.dm_bitset_cursor** %3, align 8
  %19 = getelementptr inbounds %struct.dm_bitset_cursor, %struct.dm_bitset_cursor* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %19, align 8
  %22 = load %struct.dm_bitset_cursor*, %struct.dm_bitset_cursor** %3, align 8
  %23 = getelementptr inbounds %struct.dm_bitset_cursor, %struct.dm_bitset_cursor* %22, i32 0, i32 1
  store i64 0, i64* %23, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @le64_to_cpu(i32 %25)
  %27 = load %struct.dm_bitset_cursor*, %struct.dm_bitset_cursor** %3, align 8
  %28 = getelementptr inbounds %struct.dm_bitset_cursor, %struct.dm_bitset_cursor* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 8
  store i32 0, i32* %2, align 4
  br label %29

29:                                               ; preds = %13, %11
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @dm_array_cursor_next(i32*) #1

declare dso_local i32 @dm_array_cursor_get_value(i32*, i8**) #1

declare dso_local i32 @le64_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
